# identity

./: .drone.yml  .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: address.rs  base24.rs  base62.rs  identity.rs  identitysecret.rs  lib.rs  p384.rs  signature.rs  x25519.rs
src/p384/: address.rs  identifier.rs  identity.rs  identity_secret.rs  mod.rs  short_address.rs
