[package]
authors = ["ZeroTier, Inc. <contact@zerotier.com>"]
edition = "2021"
license = "MPL-2.0"
name = "zerotier-identity"
version = "0.1.1"

[dependencies]
serde = { version = "1.0.183", features = ["derive"], default-features = false }
serde_cbor = { version = "0.11.2" }
zeroize = { version = "1.6.0", features = ["zeroize_derive"], default-features = false }
zerotier-common-utils = { git = "https://github.com/zerotier/common-utils.git" }
zerotier-crypto-glue = { git = "https://github.com/zerotier/crypto-glue.git" }
